@@ -1,17 +1,15 @@
-# ----- Stage 1: Build ứng dụng với Maven -----
-FROM maven:3-eclipse-temurin-21 AS build
+# ---- Build stage ----
+FROM maven:3.9.8-eclipse-temurin-21 AS build
 WORKDIR /app
+COPY pom.xml .
+RUN mvn -q -e -DskipTests dependency:go-offline
+COPY src ./src
+RUN mvn -q -DskipTests package
 
-COPY . .
-
-RUN mvn clean package -DskipTests
-
-# ----- Stage 2: Runtime -----
-FROM openjdk:21-jdk-slim
-WORKDIR /app
-
+# ---- Run stage ----
+FROM eclipse-temurin:21-jre-alpine
+WORKDIR /opt/app
 COPY --from=build /app/target/*.jar app.jar
-
+ENV JAVA_OPTS="-XX:+UseZGC -XX:MaxRAMPercentage=75"
 EXPOSE 8080
-
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["sh","-c","java $JAVA_OPTS -jar app.jar"]
